27/4/12
  Added stacking mode

7/4/12
  Fix for transient windows going off the screen

25/3/12
  Fix for firefox menu disappearing after deleting an entry

7/3/12
  Multiple transient windows are handled properly now

6/3/12
  Added option to have new window at the top of the stack when using attach aside

28/2/12
  Removed remembering the last focused window

27/2/12
  If FOLLOW_MOUSE = 0 the cursor will be moved to the last focused window 
    when a window is removed or the desktop changed

26/2/12
  Added option to config to not have the panel shown if there's a window open

6/2/12
  Bugfixes. Fullscreen mode last window always mapped now.
  			tabbed firefox doesn't open empty windows on unfocused desktops
  			transient windows are always floating

9/1/12
  Master area is reset if second last window is removed

7/1/12
  Fix for window sizes after the window at the top of the stack has been resized
  Added limits on the area of the master window 
  Fix for thunderbird write window( and others probably) just unmapping

27/12/11
  A better send_kill_signal function so we can have a better quit function

24/12/11
  Added keyboard shortcut to toggle the panel
  Changed quit function to exit on first try

23/12/11
  Added keyboard shortcut options to follow window to new desktop or not

8/12/11
  Fix for fullscreen mode flicker

28/11/11
  Replaced next/prev_desktop function with shorter rotate_desktop function
  (thanks to c00kiemon5ter)

28/11/11
  Added last desktop function for switching back to the last opened desktop
  (thanks to c00kimon5ter)

26/11/11
  Added option to click on a window to focus it
  (thanks to richo4)

21/11/11
  Fix for transient windows not being managed

15/11/11
  Fix for when trying to swap master with only one window

23/10/11
  Fine tuned the popup window management so notification windows aren't managed either

15/10/11
  Added having applications start on specified desktop

13/10/11